<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rfcx installer</string>

    <string name="menu_prefs">prefs</string>
    <string name="menu_api_register">register</string>
	<string name="menu_cputuner_install">install cputuner</string>
	<string name="menu_spectrogram_install">install spectrogram</string>
	<string name="menu_moduleloader_install">install moduleloader</string>
	<string name="menu_check_version">update guardian</string>
	<string name="menu_root_command">root command</string>
	<string name="menu_set_defaults">set defaults</string>
	<string name="menu_delete_apps">delete apps</string>
	
</resources>
